# electron-monorepo

./: .env  .env.development  .env.production  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .oxlintrc.json  .prettierrc  Cargo.toml  README.md  cspell.json  eslint.config.js  eslint.config.ts  package-lock.json  package.json  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  turbo.json
.devtools/vue/: manifest.json
.github/workflows/: sync-from-gitee.yml
.husky/: commit-msg  pre-commit  validate-commit-msg.js
cli/: dev.ts  package.json  tsconfig.json  tsup.config.ts
cli/helper/: inquirer.helper.ts
cli/src/: clean.ts  env.ts
configs/: tsconfig.schema.json
creates/: README.md
creates/libs/: build-macos.ts  package.json  tsconfig.json
doc/: .fatherrc.ts  .prettierrc.js  package.json  tsconfig.json
docs/: .dumirc.ts  .gitignore  api-examples.md  index.md  markdown-examples.md  package.json
docs/.vitepress/: config.ts
docs/api/: ipc.md  pinia-sync.md  preload.md  (+1 more)
electron/: .npmrc  package.json  tsconfig.json
neon-bridge/: .gitignore  README.md  index.ts  package.json
package/bridge/: Cargo.toml  README.md  index.ts  package.json  test.ts  tsconfig.json  tsup.config.ts
package/bridge/src/: lib.rs
package/bridge/types/: index.d.ts
package/bridge/typings/: index.d.ts
platform/: Cargo.toml  README.md  main.rs  package.json
platform/macos/: Hello.swift
platform/macos/NativeLibrary/: Package.swift  README.md
platform/os/network/: core.rs  error.rs  macos.rs  mod.rs  types.rs  windows.rs
test/: index.ts  package.json
(+140 files in other folders)
