[workspace]
members = [
    "package/bridge",
    "process/main",
    "package/napi",
    "package/wasm",
    "platform",
]

[workspace.dependencies]
uuid = { version = "1.7", features = ["v4", "serde"] }
libc = { version = "0.2" }
chrono = "0.4"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.8.0"
