[package]
name = "bridge"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
neon = "1"
interprocess = "2.2.1"
libloading = "0.8"
